--- a/config-test.yaml
+++ b/config-test.yaml
@@ -1,2 +1,2 @@
 config:
-  infor: “main branch, springcloud-config/config-test.yaml version=1”
+  infor: "master branch, springcloud-config/config-test.yaml version=1"
